// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly create a project 1`] = `
<SubmitButton
  disabled={true}
>
  create
</SubmitButton>
`;

exports[`should correctly create a project 2`] = `
<SubmitButton
  disabled={false}
>
  create
</SubmitButton>
`;

exports[`should render correctly 1`] = `
<React.Fragment>
  <form
    onSubmit={[Function]}
  >
    <div
      className="form-field"
    >
      <label
        htmlFor="select-organization"
      >
        onboarding.create_project.organization
        <em
          className="mandatory"
        >
          *
        </em>
      </label>
      <Select
        autoFocus={true}
        className="input-super-large"
        clearable={false}
        id="select-organization"
        onChange={[Function]}
        options={
          Array [
            Object {
              "label": "Bar",
              "value": "bar",
            },
            Object {
              "label": "Foo",
              "value": "foo",
            },
          ]
        }
        required={true}
        value=""
      />
      <Button
        className="button-link big-spacer-left js-new-org"
        onClick={[Function]}
      >
        onboarding.create_project.create_new_org
      </Button>
    </div>
    <div
      className="form-field"
    >
      <label
        htmlFor="project-name"
      >
        onboarding.create_project.project_name
        <em
          className="mandatory"
        >
          *
        </em>
      </label>
      <input
        className="input-super-large"
        id="project-name"
        maxLength={400}
        minLength={1}
        onChange={[Function]}
        required={true}
        type="text"
        value=""
      />
    </div>
    <div
      className="form-field"
    >
      <label
        htmlFor="project-key"
      >
        onboarding.create_project.project_key
        <em
          className="mandatory"
        >
          *
        </em>
      </label>
      <input
        className="input-super-large"
        id="project-key"
        maxLength={400}
        minLength={1}
        onChange={[Function]}
        required={true}
        type="text"
        value=""
      />
    </div>
    <SubmitButton
      disabled={true}
    >
      create
    </SubmitButton>
    <DeferredSpinner
      className="spacer-left"
      loading={false}
      timeout={100}
    />
  </form>
</React.Fragment>
`;
